--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://studmysql01.fhict.local:3306/dbi416547_app
 spring.datasource.username=dbi416547_app
 spring.datasource.password=wRlFNPBwY6z2cE9
